# batch02-day12_cloud_infras_and_deployment

./: Solution.md
.github/workflows/: ci-cd.yml
06-lab-complete/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements-dev.txt  requirements.txt
06-lab-complete/app/: __init__.py  config.py  main.py
06-lab-complete/app/routers/: chat.py
06-lab-complete/app/services/: chatbot.py
06-lab-complete/tests/: test_chat.py  test_chatbot_service.py  test_health.py
