[project]
name = "travel-chatbot"
version = "1.0.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["check_production_ready.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]   # long lines OK (fallback responses)

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
